[gd_scene load_steps=4 format=3 uid="uid://dckjgheiiejn2"]

[ext_resource type="Script" uid="uid://dr8axky0pwvd1" path="res://scripts/auto_attack.gd" id="1_3v1oi"]
[ext_resource type="Texture2D" uid="uid://bohj3127wtx24" path="res://assets/arrow.png" id="2_3v1oi"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3v1oi"]
radius = 6.0
height = 32.0

[node name="AutoAttack" type="Area2D" groups=["Effect"]]
script = ExtResource("1_3v1oi")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 3
texture = ExtResource("2_3v1oi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.57079
scale = Vector2(0.5, 0.5)
shape = SubResource("CapsuleShape2D_3v1oi")

[node name="AutoAttackVanish" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="AutoAttackVanish" to="." method="_on_fire_ball_vanish_timeout"]
